# nyancat

./: Cargo.toml  Contribuiton.md  Dockerfile  Dockerfile.run  Dockerfile.x86  Makefile  README.Docker.md  README.md  compose.yaml
dockerfiles/: Dockerfile
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: main.ts
src/: animation.rs  cli.rs  http.rs  logging.rs  main.rs  standalone.rs  telnet.rs  terminal.rs
